@@ -18,40 +18,30 @@
 
 package org.apache.cassandra.fuzz.sai;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Consumer;
-import java.util.stream.Stream;
 
 import org.junit.Test;
 
 import org.apache.cassandra.config.CassandraRelevantProperties;
-import org.apache.cassandra.fuzz.harry.integration.model.IntegrationTestBase;
-import org.apache.cassandra.harry.data.ResultSetRow;
-import org.apache.cassandra.harry.ddl.ColumnSpec;
-import org.apache.cassandra.harry.ddl.SchemaSpec;
+import org.apache.cassandra.distributed.test.IntegrationTestBase;
+import org.apache.cassandra.harry.ColumnSpec;
+import org.apache.cassandra.harry.MagicConstants;
+import org.apache.cassandra.harry.SchemaSpec;
 import org.apache.cassandra.harry.dsl.ReplayingHistoryBuilder;
-import org.apache.cassandra.harry.gen.DataGenerators;
+import org.apache.cassandra.harry.execution.InJvmDTestVisitExecutor;
 import org.apache.cassandra.harry.gen.EntropySource;
+import org.apache.cassandra.harry.gen.Generator;
+import org.apache.cassandra.harry.gen.Generators;
 import org.apache.cassandra.harry.gen.rng.JdkRandomEntropySource;
-import org.apache.cassandra.harry.model.AgainstSutChecker;
-import org.apache.cassandra.harry.model.Model;
-import org.apache.cassandra.harry.model.SelectHelper;
-import org.apache.cassandra.harry.operations.CompiledStatement;
-import org.apache.cassandra.harry.operations.FilteringQuery;
-import org.apache.cassandra.harry.operations.Query;
-import org.apache.cassandra.harry.operations.Relation;
-import org.apache.cassandra.harry.sut.DoubleWritingSut;
-import org.apache.cassandra.harry.sut.QueryModifyingSut;
-import org.apache.cassandra.harry.sut.SystemUnderTest;
-import org.apache.cassandra.harry.sut.TokenPlacementModel;
-import org.apache.cassandra.harry.tracker.DataTracker;
-import org.apache.cassandra.harry.tracker.DefaultDataTracker;
+import org.apache.cassandra.harry.util.BitSet;
+
+import static org.apache.cassandra.harry.dsl.HistoryBuilderHelper.generateClusteringRelations;
+import static org.apache.cassandra.harry.dsl.HistoryBuilderHelper.generateValueRelations;
+import static org.apache.cassandra.harry.dsl.SingleOperationBuilder.IdxRelation;
 
 public class StaticsTortureTest extends IntegrationTestBase
 {
-    private static final long SEED = 1;
     private static final int MAX_PARTITION_SIZE = 10_000;
     private static final int NUM_PARTITIONS = 100;
     private static final int UNIQUE_CELL_VALUES = 5;
@@ -61,206 +51,139 @@ public class StaticsTortureTest extends IntegrationTestBase
     {
         CassandraRelevantProperties.SAI_INTERSECTION_CLAUSE_LIMIT.setInt(6);
         int idx = 0;
-        staticsTortureTest(Arrays.asList(ColumnSpec.ck("ck1", ColumnSpec.asciiType(4, 100)),
-                                         ColumnSpec.ck("ck2", ColumnSpec.asciiType),
-                                         ColumnSpec.ck("ck3", ColumnSpec.int64Type)),
-                           idx++);
-
-        for (boolean b1 : new boolean[]{ true, false })
-            for (boolean b2 : new boolean[]{ true, false })
-                for (boolean b3 : new boolean[]{ true, false })
+        for (boolean b1 : new boolean[]{ false, true })
+            for (boolean b2 : new boolean[]{ false, true })
+                for (boolean b3 : new boolean[]{ false, true })
                 {
-                    staticsTortureTest(Arrays.asList(ColumnSpec.ck("ck1", ColumnSpec.asciiType(4, 100), b1),
-                                                     ColumnSpec.ck("ck2", ColumnSpec.asciiType, b2),
-                                                     ColumnSpec.ck("ck3", ColumnSpec.int64Type, b3)),
+                    staticsTortureTest(Arrays.asList(ColumnSpec.ck("ck1", ColumnSpec.asciiType, Generators.ascii(4, 1000), b1),
+                                                     ColumnSpec.ck("ck2", ColumnSpec.asciiType, Generators.ascii(4, 1000), b2),
+                                                     ColumnSpec.ck("ck3", ColumnSpec.int64Type, Generators.int64(), b3)),
                                        idx++);
                 }
     }
 
     public void staticsTortureTest(List<ColumnSpec<?>> cks, int idx)
     {
-        SchemaSpec schema = new SchemaSpec(KEYSPACE, "tbl" + idx,
-                                           Arrays.asList(ColumnSpec.ck("pk1", ColumnSpec.int64Type),
-                                                         ColumnSpec.ck("pk2", ColumnSpec.asciiType(4, 100)),
-                                                         ColumnSpec.ck("pk3", ColumnSpec.int64Type)),
+        SchemaSpec schema = new SchemaSpec(idx,
+                                           10_000,
+                                           KEYSPACE,
+                                           "tbl" + idx,
+                                           Arrays.asList(ColumnSpec.pk("pk1", ColumnSpec.int64Type, Generators.int64()),
+                                                         ColumnSpec.pk("pk2", ColumnSpec.asciiType, Generators.ascii(4, 1000)),
+                                                         ColumnSpec.pk("pk3", ColumnSpec.int64Type, Generators.int64())),
                                            cks,
-                                           Arrays.asList(ColumnSpec.regularColumn("v1", ColumnSpec.asciiType(40, 100)),
+                                           Arrays.asList(ColumnSpec.regularColumn("v1", ColumnSpec.asciiType, Generators.ascii(4, 1000)),
                                                          ColumnSpec.regularColumn("v2", ColumnSpec.int64Type),
                                                          ColumnSpec.regularColumn("v3", ColumnSpec.int64Type)),
-                                           List.of(ColumnSpec.staticColumn("s1", ColumnSpec.asciiType(40, 100)),
-                                                   ColumnSpec.staticColumn("s2", ColumnSpec.int64Type),
-                                                   ColumnSpec.staticColumn("s3", ColumnSpec.asciiType(40, 100))
-                                           ));
+                                           Arrays.asList(ColumnSpec.staticColumn("s1", ColumnSpec.asciiType, Generators.ascii(4, 1000)),
+                                                         ColumnSpec.staticColumn("s2", ColumnSpec.int64Type),
+                                                         ColumnSpec.staticColumn("s3", ColumnSpec.asciiType, Generators.ascii(4, 1000))));
 
-        sut.schemaChange(schema.compile().cql());
-        SchemaSpec debugSchema = schema.cloneWithName(schema.keyspace, schema.table + "_debug");
-        sut.schemaChange(schema.cloneWithName(schema.keyspace, schema.table + "_debug").compile().cql());
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai' " +
+
+        cluster.schemaChange(schema.compile());
+        cluster.get(1).nodetool("disableautocompaction");
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai' " +
                                        "WITH OPTIONS = {'case_sensitive': 'false', 'normalize': 'true', 'ascii': 'true'};",
                                        schema.table,
                                        schema.regularColumns.get(0).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.regularColumns.get(0).name));
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
                                        schema.table,
                                        schema.regularColumns.get(1).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.regularColumns.get(1).name));
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
                                        schema.table,
                                        schema.regularColumns.get(2).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.regularColumns.get(2).name));
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
                                        schema.table,
                                        schema.staticColumns.get(0).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.staticColumns.get(0).name));
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
                                        schema.table,
                                        schema.staticColumns.get(1).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.staticColumns.get(1).name));
-        sut.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
+        cluster.schemaChange(String.format("CREATE INDEX %s_%s_sai_idx ON %s.%s (%s) USING 'sai';",
                                        schema.table,
                                        schema.staticColumns.get(2).name,
                                        schema.keyspace,
                                        schema.table,
                                        schema.staticColumns.get(2).name));
-        DataTracker tracker = new DefaultDataTracker();
-        TokenPlacementModel.ReplicationFactor rf = new TokenPlacementModel.SimpleReplicationFactor(cluster.size());
-        ReplayingHistoryBuilder history = new ReplayingHistoryBuilder(SEED + idx,
-                                                                      MAX_PARTITION_SIZE,
-                                                                      100,
-                                                                      tracker,
-                                                                      new DoubleWritingSut(sut,
-                                                                                           new QueryModifyingSut(sut,
-                                                                                                                 schema.keyspace + "." + schema.table,
-                                                                                                                 debugSchema.keyspace + "." + debugSchema.table)),
-                                                                      schema,
-                                                                      rf,
-                                                                      SystemUnderTest.ConsistencyLevel.QUORUM);
 
+        Generator<BitSet> regularColumnBitSet = Generators.bitSet(schema.regularColumns.size());
+        Generator<BitSet> staticColumnBitSet = Generators.bitSet(schema.staticColumns.size());
         EntropySource rng = new JdkRandomEntropySource(1l);
-        long[] values = new long[UNIQUE_CELL_VALUES];
-        for (int i = 0; i < values.length; i++)
-            values[i] = rng.next();
+
+        ReplayingHistoryBuilder history = new ReplayingHistoryBuilder(schema.valueGenerators, hb -> {
+            return InJvmDTestVisitExecutor.builder().pageSizeSelector(i -> rng.nextInt(1, 10)).build(schema, hb, cluster);
+        });
+
 
         for (int i = 0; i < NUM_PARTITIONS; i++)
         {
-            history.visitPartition(i)
-                   .insert(1,
-                           new long[]{ rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)]
+            history.insert(i, rng.nextInt(5),
+                           new int[]{ rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES)
                            },
-                           new long[]{ rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)]
-                   });
-            history.visitPartition(i)
-                   .insert(5,
-                           new long[]{ rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)]
+                           new int[]{ rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES)
+                           });
+            history.insert(i,rng.nextInt(5),
+                           new int[]{ rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES)
                            },
-                           new long[]{ rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)],
-                                       rng.nextBoolean() ? DataGenerators.UNSET_DESCR : values[rng.nextInt(values.length)]
-                   });
+                           new int[]{ rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES),
+                                      rng.nextBoolean() ? MagicConstants.UNSET_IDX : rng.nextInt(UNIQUE_CELL_VALUES)
+                           });
 
             if (rng.nextFloat() > 0.9f)
             {
-                history.visitPartition(i)
-                       .deleteRowRange(rng.nextInt(5), rng.nextInt(5), rng.nextBoolean(), rng.nextBoolean());
+                history.deleteRowRange(i, rng.nextInt(5), rng.nextInt(5),
+                                       rng.nextInt(1, schema.clusteringKeys.size()),
+                                       rng.nextBoolean(), rng.nextBoolean());
             }
 
             if (rng.nextFloat() > 0.9f)
             {
-                history.visitPartition(i)
-                       .deleteColumns();
+                history.deleteColumns(i, rng.nextInt(5), regularColumnBitSet.generate(rng), staticColumnBitSet.generate(rng));
             }
 
             if (i % 50 == 0)
                 cluster.get(1).nodetool("flush", schema.keyspace, schema.table);
+
+            if (i % 100 == 0)
+                cluster.get(1).nodetool("compact", schema.keyspace, schema.table);
         }
 
-        Model model = new AgainstSutChecker(tracker, history.clock(), sut, schema, schema.cloneWithName(schema.keyspace, debugSchema.table)) {
-            @Override
-            protected List<ResultSetRow> executeOnDebugSchema(Query query)
-            {
-                CompiledStatement s2 = query.toSelectStatement(doubleWriteTable.allColumnsSet, true)
-                                            .withSchema(schema.keyspace, schema.table, doubleWriteTable.keyspace, doubleWriteTable.table)
-                                            .withFiltering();
-                return SelectHelper.execute(sut, clock, s2, schema);
-            }
-        };
-
+        Generator<Integer> ckIdxGen = Generators.int32(0, MAX_PARTITION_SIZE);
         for (int pdx = 0; pdx < NUM_PARTITIONS; pdx++)
         {
-            long pd = history.pdSelector().pdAtPosition(pdx);
-            history.pdSelector().pdAtPosition(1);
-            for (int i1 = 0; i1 < values.length; i1++)
-                for (int i2 = 0; i2 < values.length; i2++)
-                    for (int i3 = 0; i3 < values.length; i3++)
-                    {
-                        long[] descriptors = new long[]{ values[i1], values[i2], values[i3],
-                                                         values[i1], values[i2], values[i3] };
-                        List<Relation> relations = new ArrayList<>();
-                        Stream.concat(schema.regularColumns.stream(),
-                                      schema.staticColumns.stream())
-                              .forEach(new Consumer<>()
-                              {
-                                  int counter = 0;
-
-                                  @Override
-                                  public void accept(ColumnSpec<?> column)
-                                  {
-                                      if (rng.nextBoolean())
-                                          return;
-
-                                      if (column.type.toString().equals(ColumnSpec.int64Type.toString()))
-                                      {
-                                          if (rng.nextBoolean())
-                                          {
-                                              relations.add(Relation.relation(Relation.RelationKind.EQ,
-                                                                              column,
-                                                                              descriptors[counter]));
-                                          }
-                                          else
-                                          {
-                                              Relation.relation(rng.nextBoolean() ? Relation.RelationKind.LT : Relation.RelationKind.GT,
-                                                                column,
-                                                                descriptors[counter]);
-                                          }
-                                      }
-                                      else
-                                      {
-                                          Relation.relation(Relation.RelationKind.EQ,
-                                                            column,
-                                                            descriptors[counter]);
-                                      }
-
-                                      counter++;
-                                  }
-                              });
-
-                        // Without partition key
-                        model.validate(new FilteringQuery(-1, false, relations, schema)
-                        {
-                            @Override
-                            public CompiledStatement toSelectStatement()
-                            {
-                                return SelectHelper.select(schemaSpec, null, schemaSpec.allColumnsSet, relations, reverse, true);
-                            }
-                        });
-                        model.validate(new FilteringQuery(pd, false, relations, schema));
-                    }
+            for (int i = 0; i < 10; i++)
+            {
+                List<IdxRelation> ckRelations = generateClusteringRelations(rng, schema.clusteringKeys.size(), ckIdxGen);
+                List<IdxRelation> regularRelations = generateValueRelations(rng, schema.regularColumns.size(),
+                                                                            column -> Math.min(schema.valueGenerators.regularPopulation(column), MAX_PARTITION_SIZE));
+                List<IdxRelation> staticRelations = generateValueRelations(rng, schema.staticColumns.size(),
+                                                                           column -> Math.min(schema.valueGenerators.staticPopulation(column), MAX_PARTITION_SIZE));
+                history.select(pdx,
+                               ckRelations.toArray(new IdxRelation[0]),
+                               regularRelations.toArray(new IdxRelation[0]),
+                               staticRelations.toArray(new IdxRelation[0]));
+            }
         }
     }
 }
